# image_processing

./: .gitignore  README.md  USAGE.md  generate_rainbow_tiffs.py  pipeline_core.py  pyproject.toml  tif_convert.py  tif_pipeline.py  tif_stacker.py
.github/workflows/: ci.yml  publish-pypi.yml
src/img_timeline/: __init__.py  cli.py  core.py
tests/: benchmark_flow.py  test_pipeline.py
