[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-color-timeline"
version = "0.1.0"
description = "Movie color analysis tool for building frame-by-frame average color timeline posters."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "aelder" }]
keywords = [
  "movie color analysis",
  "film color palette",
  "average color poster",
  "frame color timeline",
  "tiff processing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/aelder/image_processing"
Repository = "https://github.com/aelder/image_processing"
Issues = "https://github.com/aelder/image_processing/issues"

[project.optional-dependencies]
progress = ["tqdm>=4.66.0"]
dev = [
  "ruff>=0.6.0",
]

[project.scripts]
img-timeline = "img_timeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
